--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/database": "^14.3.0",
     "@react-native-firebase/firestore": "^14.3.0",
+    "@react-native-picker/picker": "^2.4.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/stack": "^6.0.11",
@@ -21,6 +22,7 @@
     "react-native": "^0.67.4",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.0",
+    "react-native-permissions": "^3.3.1",
     "react-native-reanimated": "^2.5.0",
     "react-native-safe-area-context": "^4.2.4",
     "react-native-screens": "^3.13.1"
