--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.17.6",
     "@react-native-firebase/app": "^14.3.0",
     "@react-native-firebase/database": "^14.3.0",
     "@react-native-firebase/firestore": "^14.3.0",
@@ -21,6 +22,7 @@
     "firebase": "^8.10.0",
     "react": "^17.0.2",
     "react-native": "^0.67.4",
+    "react-native-date-picker": "^4.2.2",
     "react-native-elements": "^3.4.2",
     "react-native-gesture-handler": "^2.1.0",
     "react-native-image-picker": "^4.8.2",
